[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
apkvolt = ["*.jar"]

[project]
name = "APKVolt"
version = "1.0.1"
description = "Build Python projects into Android APKs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = [
	"LICENSE"
]
authors = [
	{name = "Luan da Silva Pestana", email = "euluan.pestana@gmail.com"}
]

dependencies = [
	"requests>=2.30",
	"pyaxml>=0.0.35",
	"Pillow"
]

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
]

[project.scripts]
# Opcional: cria um comando para rodar no terminal
apkvolt = "apkvolt.utils:main"
